<resources>
    <string name="app_name">EduNiger</string>
    <string name="app_version">3.1.1</string>
    <string name="ip_server_android2">http://192.168.1.25:2222/fabi/android/</string>
    <string name="ip_server2">http://192.168.1.25:2222/fabi/</string>
    <string name="ip_server_android">http://78.46.46.154/fabi/android/</string>
    <string name="ip_server">http://78.46.46.154/fabi/</string>
    <string name="database_name">data.db</string>
    <string name="edit_text_hint_id_number">  Votre matricule ?</string>
    <string name="edit_text_hint_email">  exemple@gmail.com</string>
    <string name="edit_text_hint_password">  Votre mot de passe ?</string>
    <string name="edit_text_hint_password_confirm">  Confirmer votre mot de passe</string>
    <string name="button_text_connection">Se Connecter</string>
    <string name="button_text_adhere">S\'adhérer</string>
    <string name="text_view_pass_register_login">Avez-Vous un compte ?</string>
    <string name="register_error_0000">Veuillez remplir ces champs svp</string>
    <string name="register_error_0111">Votre muméro svp</string>
    <string name="register_error_01111">Veuillez saisir le matricule</string>
    <string name="register_error_10111">Veuillez saisir le nom</string>
    <string name="register_error_11011">Veuillez saisir le prénom</string>
    <string name="register_error_11101">Veuillez saisir la section</string>
    <string name="register_error_11110">Veuillez saisir le departement</string>
    <string name="register_error_1011">Votre email svp</string>
    <string name="register_error_1101">Votre mot de passe svp</string>
    <string name="register_error_1110">Confirmer votre mot de passe svp</string>
    <string name="register_error_1100">Erreur de confirmation</string>
    <string name="register_succes_1111">Connexion...</string>
    <string name="register_error_0111_1_data">Ce compte existe</string>
    <string name="register_error_1011_data">L\'adresse email existe déjà</string>
    <string name="register_error_0111_0_data">Matricule introuvable</string>
    <string name="no_connection">Aucune conexion</string>
    <string name="text_view_to_register">S\'inscrire</string>
    <string name="text_help">Besoin d\'aide</string>
    <string name="login_error_00">Votre numéro et mot de passe svp</string>
    <string name="account_not_exist">Ce compte n\' existe pas</string>
    <string name="incorrect_password">Mot de passe incorrect</string>
    <string name="forgot_password">j\'ai oublié mon mot de passe</string>
    <string name="find_book">  Rechercher un livre</string>
    <string name="books_title">Livres</string>
    <string name="category_title">Catégories</string>
    <string name="structure">Structures</string>
    <string-array name="journale">
        <item>"Motivation" </item>
        <item>Introduction</item>
        <item>Amities</item>
        <item>Le Respet</item>
        <item>La Responsabliter</item>
        <item>"La Politesse" </item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="options_array">
        <item>Crash de l\' application</item>
        <item>Problème de compatiblité</item>
        <item>Problème de connexion</item>
        <item>Erreur d\' orthographe</item>
        <item>Ajout d\' une fonctionnalité</item>
        <item>Amélioration des performances</item>
    </string-array>
    <string-array name="profesion_array">
        <item>Profession</item>
        <item>Élève</item>
        <item>Étudiant(e)</item>
        <item>Enseignant(e)</item>
        <item>Professionnel</item>
    </string-array>
    <string-array name="delait_reservation">
        <item>Pour une journée</item>
        <item>Pour deux jours</item>
        <item>Pour trois jours</item>
        <item>Pour quatre jours</item>
        <item>Pour cinq jours</item>
    </string-array>
    <string-array name="delait_cosultation">
        <item>Pour une heur</item>
        <item>Pour deux heurs</item>
        <item>Pour trois heurs</item>
        <item>Pour quatre heurs</item>
        <item>Pour cinq heurs</item>
    </string-array>
    <string-array name="array_structure">
        <item>Structure</item>
        <item>OpenLab</item>
        <item>Fabi by Fast</item>
        <item>Kit TD</item>
        <item>Africa Héros</item>
        <item>Concours EAMAC</item>
        <item>Kit BEPC</item>
    </string-array>
    <string-array name="array_categoty">
        <item>Categorie</item>
        <item>Mathématique</item>
        <item>Informatique</item>
        <item>Physique</item>
        <item>Biochimie</item>
        <item>Biologie</item>
        <item>Chimie</item>
        <item>Geologie</item>
        <item>Entrepreneuriat</item>
        <item>Culture</item>
        <item>Littérature</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the loandBook "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="book_title">Titre du livre</string>
    <string name="todo">TODO</string>
    <string name="book_category">Categorie du livre</string>
    <string name="category">Categorie</string>
    <string name="category_book">categorie du livre</string>
    <string name="title_tones">Titre du morco</string>
    <string name="user_name">Nom de l\' utilisateur</string>
    <string name="message_default">Salut que puis-je faire pour vous</string>
    <string name="cancel_reservation">Annuler la consultation</string>
    <string name="reservation_book">Réservation</string>
    <string name="your_electronic_books">Vos Livres Électroniques</string>
    <string name="author">Auteurs</string>
    <string name="success">Succès</string>
    <string name="ok">OK</string>
    <string name="email_new">Nouveau email</string>
    <string name="goto_change_password">Changer votre mot de passe</string>
    <string name="send">Envoyer</string>
    <string name="suggestion_hint_message">Distes-nous comment nous pouvons amélioré l\'application EduNiger</string>
    <string name="information_phone">Inclure les information de l\' appariel ? (facultatif)</string>
    <string name="details_information_phone">Les details techniques tels que le modele de votre appareil peuvent nous aide a repondre a votre question</string>
</resources>