<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/wrap_content_all"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">
    <RelativeLayout
        android:id="@+id/block_profile"
        style="@style/wrap_content_all">

        <ImageView
            android:id="@+id/image_view_adapter_talks_profile"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/vector_black3_profile"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/text_view_adapter_talks_user_name"
            style="@style/wrap_content_all"
            android:layout_toEndOf="@+id/image_view_adapter_talks_profile"
            android:text="@string/user_name"
            android:textSize="@dimen/size_profil"
            android:textColor="@color/black"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/wrap_content_all"
        android:layout_below="@+id/block_profile"
        >
        <TextView
            android:id="@+id/text_view_adapter_talks_message"
            style="@style/wrap_content_all"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black2"
            android:textSize="@dimen/size_text"
            android:text="@string/message_default"/>
    </RelativeLayout>
</RelativeLayout>