<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/match_parent_all"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.ninotech.fabi.controleur.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/edit_textRegister_activity_id_number"
        android:layout_marginBottom="40dp"
        android:background="@android:color/transparent"
        android:elevation="10dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            style="@style/wrap_content_all"
            android:src="@drawable/img_regester"
            android:contentDescription="@string/todo" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edit_textRegister_activity_id_number"
        android:hint="@string/edit_text_hint_id_number"
        android:layout_above="@id/edit_text_register_email"
        android:drawableStart="@drawable/vector_black3_identify"
        android:inputType="number"
        android:importantForAutofill="no"
        style="@style/edit_text_register"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_text_register_email"
        android:hint="@string/edit_text_hint_email"
        android:layout_above="@id/edit_text_register_password"
        android:drawableStart="@drawable/vector_black3_email"
        android:inputType="textEmailAddress"
        style="@style/edit_text_register"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_text_register_password"
        android:hint="@string/edit_text_hint_password"
        android:layout_above="@id/edit_text_register_password_confirm"
        android:drawableStart="@drawable/vector_black3_password"
        android:inputType="textPassword"
        style="@style/edit_text_register"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_text_register_password_confirm"
        android:hint="@string/edit_text_hint_password_confirm"
        android:layout_above="@+id/text_view_register_error"
        android:drawableStart="@drawable/vector_black3_lock"
        android:inputType="textPassword"
        style="@style/edit_text_register"
        android:autofillHints="" />

    <TextView
        android:id="@+id/text_view_register_error"
        style="@style/text_view_error_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/relative_layout_change_password_connection"
        android:layout_marginBottom="31dp" />

    <RelativeLayout
        android:id="@+id/relative_layout_change_password_connection"
        style="@style/wrap_content_all"
        android:layout_above="@+id/text_view_register_login"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="20dp"
        >

        <ProgressBar
            android:id="@+id/progress_bar_register_connection"
            android:layout_alignStart="@id/button_register_connection"
            style="@style/progress_bar_connection"/>

        <Button
            android:id="@+id/button_register_connection"
            style="@style/button_connexion" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_view_register_login"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        style="@style/text_view_pass_login_register" />
</RelativeLayout>